automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900);
 @import url(http://fonts.googleapis.com/css?family=Clicker+Script);
 
-/* This 
-is 
-a comment! */
+/* This is a comment! */
 
 /* CSS Syntax:
 
@@ -69,4 +67,11 @@ figcaption {
 
 #details a:active {
   color: red;
+}
+
+/* LAYOUT */
+
+.wrapper{
+  width: 960px;
+  margin: 0 auto;
 }
