automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -86,11 +86,11 @@ figcaption {
 .col-2 {
   float: left;
   width: 66%;
-  background: #ccc:
+  background: #ccc;
 }
 
 .col-3 {
-  background: #ccc:
+  background: #ccc;
 }
 
 .clearfix:after {
