automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,8 @@ section {
 
 * { /*include padding and border in size of content*/
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 .wrapper {
