--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,24 @@ img, video, audio {
   max-width: 100%;
 }
 
+/* SOCIAL */
+
+#social {
+  position: fixed;
+  top: 200px;
+  right: 20px;
+  width: 40px;
+  z-index: 1;
+}
+
+#social a {
+  display: block;
+  width: 40px;
+  height: 40px;
+  background: yellow;
+  
+}
+
 /* SECTIONS */
 
 section {
